// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloWorldComponent ?name="David" rendering matches snapshot 1`] = `
<app-hello-world
  name={[Function String]}
  route={[Function Object]}
>
  <div
    class="hello-world"
  >
    <h1>
      Hello David!
    </h1>
  </div>
</app-hello-world>
`;

exports[`HelloWorldComponent by default rendering matches snapshot 1`] = `
<app-hello-world
  name={[Function String]}
  route={[Function ActivatedRoute]}
>
  <div
    class="hello-world"
  >
    <h1>
      Hello World!
    </h1>
  </div>
</app-hello-world>
`;
